# AdvancedCourseInMarketing_Scraping

./: README.md  pyproject.toml
amazon_scraper/: 1st_page.csv  1st_page.py  recommended_pages.csv  recommended_pages.py
