[tool.poetry]
name = "amazon-scraper"
version = "0.1.0"
description = ""
authors = ["YuA-hit <1122001m@g.hit-u.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
bs4 = "^0.0.2"
fake-useragent = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
